@@ -1,8 +1,11 @@
 DFHack future
 
+  Internals:
+    - Lua API for a better random number generator and perlin noise functions.
   New commands:
     - restrictliquid - Restrict traffic on every visible square with liquid.
     - restrictice - Restrict traffic on squares above visible ice.
+    - enable, disable - Built-in commands that can be used to enable/disable many plugins.
   New scripts:
     - masspit: designate caged creatures in a zone for pitting
     - locate_ore: scan the map for unmined ore veins
@@ -15,6 +18,7 @@ DFHack future
     - ruby: add df.dfhack_run "somecommand"
     - magmasource: rename to 'source', allow water/magma sources/drains
     - core: fix SC_WORLD_(UN)LOADED event for arena mode
+    - tiletypes: support changing tile material to arbitrary stone.
   New tweaks:
     - hive-crash: Prevent crash if bees die in a hive with ungathered products (bug 6368).
   New plugins:
